<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
    xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>
    <groupId>jsql-injection</groupId>
    <artifactId>jsql-injection</artifactId>
    <version>v0.85</version>
    <packaging>pom</packaging>
    
    <modules>
        <module>model</module>
        <module>view</module>
    </modules>

    <properties>
        <project.build.sourceEncoding>ISO-8859-1</project.build.sourceEncoding>
        <maven.compiler.source>11</maven.compiler.source>
        <maven.compiler.target>11</maven.compiler.target>
        <sonar.projectKey>jsql-injection:jsql-injection</sonar.projectKey>
        <sonar.organization>ron190-github</sonar.organization>
        <sonar.host.url>https://sonarcloud.io</sonar.host.url>
        <sonar.java.binaries>target/classes</sonar.java.binaries>
        <sonar.java.source>11</sonar.java.source>
    </properties>
    
    <build>

        <plugins>
    
            <!-- Generate reports for Sonar and Codecov -->
            <plugin>
                <groupId>org.jacoco</groupId>
                <artifactId>jacoco-maven-plugin</artifactId>
                <version>0.8.7</version>
                <executions>
                    <execution>
                        <id>prepare-agent</id>
                        <goals>
                            <goal>prepare-agent</goal>
                        </goals>
                        <configuration>
                          <destFile>${project.build.directory}/jacoco-unit.exec</destFile>
                        </configuration>
                    </execution>
                    <execution>
                        <id>prepare-agent-integration</id>
                        <goals>
                            <goal>prepare-agent-integration</goal>
                        </goals>
                        <configuration>
                          <destFile>${project.build.directory}/jacoco-integration.exec</destFile>
                        </configuration>
                    </execution>
                    <execution>
                        <id>report</id>
                        <phase>post-integration-test</phase>
                        <goals>
                            <goal>merge</goal>
                            <goal>report</goal>
                        </goals>
                        <configuration>
                            <!-- merge config -->
                            <destFile>${project.build.directory}/jacoco.exec</destFile>
                            <fileSets>
                               <fileSet>
                                   <directory>${project.build.directory}</directory>
                                   <includes>
                                       <include>**/*.exec</include>
                                   </includes>
                               </fileSet>
                            </fileSets>
                            <!-- report config -->
                            <dataFile>${project.build.directory}/jacoco.exec</dataFile>
                        </configuration>
                    </execution>
                </executions>
                <configuration>
                    <excludes>
                        <exclude>**/graphql/QueryMethodAccess.class</exclude>
                        <exclude>**/graphql/PostMethodAccess.class</exclude>
                        <exclude>**/graphql/PostResolverMethodAccess.class</exclude>
                        <exclude>**/graphql/AuthorMethodAccess.class</exclude>
                        <exclude>**/graphql/AuthorResolverMethodAccess.class</exclude>
                        <exclude>**/graphql/MutationMethodAccess.class</exclude>
                    </excludes>
                </configuration>
            </plugin>

        </plugins>
        
    </build>
    
    <dependencyManagement>
        <dependencies>
            <dependency>
                <groupId>org.apache.logging.log4j</groupId>
                <artifactId>log4j-bom</artifactId>
                <version>2.14.0</version>
                <scope>import</scope>
                <type>pom</type>
            </dependency>
        </dependencies>
    </dependencyManagement>

    <dependencies>

        <dependency>
            <groupId>org.apache.commons</groupId>
            <artifactId>commons-text</artifactId>
            <version>1.9</version>
        </dependency>
    
    </dependencies>
</project>